@@ -3,21 +3,22 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
-public class DoubleType implements JavaNumericType {
-    public static final DoubleType INSTANCE = new DoubleType();
+public class JavaIntType implements JavaNumericType {
+    public static final JavaIntType INSTANCE = new JavaIntType();
 
-    protected DoubleType() {}
+    protected JavaIntType() {}
 
     @Override
     public String toString() {
-        return "double";
+        return "int";
     }
 
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 
     @Override
@@ -32,12 +33,12 @@ public class DoubleType implements JavaNumericType {
 
     @Override
     public boolean is32Bits() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean is64Bits() {
-        return true;
+        return false;
     }
 
     @Override
@@ -47,7 +48,7 @@ public class DoubleType implements JavaNumericType {
 
     @Override
     public boolean isIntegral() {
-        return false;
+        return true;
     }
 
 }
