@@ -3,22 +3,22 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
-public class ShortType implements JavaNumericType {
-    public static final ShortType INSTANCE = new ShortType();
+public class JavaShortType implements JavaNumericType {
+    public static final JavaShortType INSTANCE = new JavaShortType();
 
-    protected ShortType() {}
+    protected JavaShortType() {}
 
     @Override
     public String toString() {
         return "short";
     }
 
-
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 
     @Override
